bad/incr_literal_string.example_compiler_output
ERROR
[1mbad/incr_literal_string.lat:4:7: [1;31merror: [0;1mexpression is not assignable[m
	"abc"++;
	     [1;32m^[m
[1mbad/incr_literal_string.lat:4:6: [1;34mnote: [0;1mexpression starts here[m
	"abc"++;
	    [1;32m^[m
